--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "homepage": "https://github.com/CBIIT/nci-webtools-dceg-mosaic-tiler#readme",
   "dependencies": {
-    "d3": "^7.8.0",
-    "html-react-parser": "^3.0.4"
+    "d3": "^3.5.17",
+    "html-react-parser": "^3.0.4",
+    "jquery": "^3.6.3"
   }
 }
