--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "d3": "^3.5.17",
     "html-react-parser": "^3.0.4",
-    "jquery": "^3.6.3",
-    "react-circos": "^1.0.0"
+    "jquery": "^3.6.3"
   }
 }
