--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -18,11 +18,11 @@ TimeOut 900
 
 # Use html5 routing
 <IfModule rewrite_module>
-  <Location "${APP_PATH}">
+  <Location "${APPLICATION_PATH}">
     RewriteEngine on
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule . ${APP_PATH}/index.html [L]
+    RewriteRule . ${APPLICATION_PATH}/index.html [L]
   </Location>
 </IfModule>
 
