--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "html-loader": "^4.2.0",
+    "plotly.js": "^2.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-circos": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
