--- a/client/package.json
+++ b/client/package.json
@@ -49,5 +49,5 @@
     "sass": "^1.57.0"
   },
   "homepage": "/mosaic-tiler",
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000/mosaic-tiler"
 }
