--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-table": "^7.8.0",
     "recoil": "^0.7.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
