--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -28,7 +28,7 @@ TimeOut 900
 
 # Proxy /api requests to $API_BASE_URL/api
 <IfModule proxy_module>
-  <Location "/mosaic-tiler/api">
+  <Location "/gwas-target/api">
     RewriteEngine Off
     ProxyPass "${API_BASE_URL}/api"
     ProxyPassReverse "${API_BASE_URL}/api"
