--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "homepage": "https://github.com/CBIIT/nci-webtools-dceg-mosaic-tiler#readme",
   "dependencies": {
-    "d3": "^3.5.17",
+    "@types/d3": "^7.4.0",
+    "d3": "^7.8.2",
     "html-react-parser": "^3.0.4",
-    "jquery": "^3.6.3"
+    "jquery": "^3.6.3",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
