--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "html-loader": "^4.2.0",
     "html-to-image": "^1.11.11",
     "plotly.js": "^2.18.0",
+    "plotly.js-dist": "^2.20.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-circos": "^1.0.0",
