--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "PUBLIC_URL=/mosaic-tiler/ react-scripts start",
+    "build": "PUBLIC_URL=/mosaic-tiler/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -54,6 +54,6 @@
   "devDependencies": {
     "sass": "^1.57.0"
   },
-  "homepage": "/",
+  "homepage": "/mosaic-tiler/",
   "proxy": "http://localhost:9000/"
 }
