--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - cluster.name=opensearch-cluster
       - discovery.type=single-node
       - plugins.security.ssl.http.enabled=false
-      - plugins.security.disabled=true
+      #- plugins.security.disabled=true
     ports:
       - 9200:9200 # REST API
     volumes:
