--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@opensearch-project/opensearch": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,8 +29,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "PUBLIC_URL=/mosaic-tiler/ react-scripts start",
-    "build": "PUBLIC_URL=/mosaic-tiler/ react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
