--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/d3": "^7.4.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "d3": "^7.8.2",
