--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,6 @@
   "devDependencies": {
     "sass": "^1.57.0"
   },
-  "homepage": "/mosaic-tiler/",
+  "homepage": "/",
   "proxy": "http://localhost:9000/"
 }
