--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -26,14 +26,23 @@ TimeOut 900
   </Location>
 </IfModule>
 
-# Proxy /api requests to $API_BASE_URL/api
+
+# Proxy /api requests to $BASE_URL/api
 <IfModule proxy_module>
-  <Location "/gwas-target/api">
+  <Location "/api">
     RewriteEngine Off
-    ProxyPass "${API_BASE_URL}/api"
-    ProxyPassReverse "${API_BASE_URL}/api"
+    ProxyPass "${BASE_URL}/api"
+    ProxyPassReverse "${BASE_URL}/api"
   </Location>
 </IfModule>
+
+# Proxy /api requests to $API_BASE_URL/api
+#<IfModule proxy_module>
+#  <Location "/gwas-target/api">
+#    ProxyPass "${API_BASE_URL}/api"
+#    ProxyPassReverse "${API_BASE_URL}/api"
+#  </Location>
+#</IfModule>
 
 # Compress responses
 <IfModule deflate_module>
