--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -31,8 +31,8 @@ TimeOut 900
 <IfModule proxy_module>
   <Location "/api">
     RewriteEngine Off
-    ProxyPass "${BASE_URL}/api"
-    ProxyPassReverse "${BASE_URL}/api"
+    ProxyPass "${API_BASE_URL}/api"
+    ProxyPassReverse "${API_BASE_URL}/api"
   </Location>
 </IfModule>
 
