--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       dockerfile: "./docker/frontend.dockerfile"
       args:
         APPLICATION_PATH: /
-        BASE_URL: http://backend:9000
+        API_BASE_URL: http://backend:9000
     environment:
-      BASE_URL: http://backend:9000
+      API_BASE_URL: http://backend:9000
     ports:
       - "3000:80"
 
