--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -29,7 +29,7 @@ TimeOut 900
 
 # Proxy /api requests to $BASE_URL/api
 <IfModule proxy_module>
-  <Location "/api">
+  <Location "/gwas-target/api">
     RewriteEngine Off
     ProxyPass "${API_BASE_URL}/api"
     ProxyPassReverse "${API_BASE_URL}/api"
