change port name

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -16,15 +16,25 @@ TimeOut 900
   Options FollowSymLinks
 </Directory>
 
-# Use html5 routing
 <IfModule rewrite_module>
-  <Location "${APPLICATION_PATH}">
-    RewriteEngine on
-    RewriteCond %{REQUEST_FILENAME} !-d
+  <Directory /var/www/html>
+    RewriteEngine On
+    RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule . ${APPLICATION_PATH}/index.html [L]
-  </Location>
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteRule . /index.html [L]
+  </Directory>
 </IfModule>
+# Use html5 routing
+#<IfModule rewrite_module>
+#  <Location "${APPLICATION_PATH}">
+#    RewriteEngine on
+#    RewriteCond %{REQUEST_FILENAME} !-d
+#    RewriteCond %{REQUEST_FILENAME} !-f
+#    RewriteRule . ${APPLICATION_PATH}/index.html [L]
+#  </Location>
+#</IfModule>
 
 
 # Proxy /api requests to $BASE_URL/api
