--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -41,8 +41,8 @@ TimeOut 900
 <IfModule proxy_module>
   <Location "/mca-explorer/api">
     RewriteEngine Off
-    ProxyPass "${API_BASE_URL}/api"
-    ProxyPassReverse "${API_BASE_URL}/api"
+    ProxyPass "${API_BASE_URL}/mca-explorer/api"
+    ProxyPassReverse "${API_BASE_URL}/mca-explorer/api"
   </Location>
 </IfModule>
 
