--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -16,33 +16,24 @@ TimeOut 900
   Options FollowSymLinks
 </Directory>
 
-<IfModule rewrite_module>
-  <Directory /var/www/html>
-    RewriteEngine On
-    RewriteBase /
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule . /index.html [L]
-  </Directory>
-</IfModule>
+
 # Use html5 routing
-#<IfModule rewrite_module>
-#  <Location "${APPLICATION_PATH}">
-#    RewriteEngine on
-#    RewriteCond %{REQUEST_FILENAME} !-d
-#    RewriteCond %{REQUEST_FILENAME} !-f
-#    RewriteRule . ${APPLICATION_PATH}/index.html [L]
-#  </Location>
-#</IfModule>
+<IfModule rewrite_module>
+  <Location "${APPLICATION_PATH}">
+    RewriteEngine on
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule . ${APPLICATION_PATH}/index.html [L]
+  </Location>
+</IfModule>
 
 
 # Proxy /api requests to $BASE_URL/api
 <IfModule proxy_module>
-  <Location "/mca-explorer/api">
+  <Location "/api">
     RewriteEngine Off
-    ProxyPass "${API_BASE_URL}/mca-explorer/api"
-    ProxyPassReverse "${API_BASE_URL}/mca-explorer/api"
+    ProxyPass "${API_BASE_URL}/api"
+    ProxyPassReverse "${API_BASE_URL}/api"
   </Location>
 </IfModule>
 
