common out routing

--- a/docker/frontend.conf
+++ b/docker/frontend.conf
@@ -18,14 +18,14 @@ TimeOut 900
 
 
 # Use html5 routing
-<IfModule rewrite_module>
-  <Location "${APPLICATION_PATH}">
-    RewriteEngine on
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule . ${APPLICATION_PATH}/index.html [L]
-  </Location>
-</IfModule>
+#<IfModule rewrite_module>
+#  <Location "${APPLICATION_PATH}">
+#    RewriteEngine on
+#    RewriteCond %{REQUEST_FILENAME} !-d
+#    RewriteCond %{REQUEST_FILENAME} !-f
+#    RewriteRule . ${APPLICATION_PATH}/index.html [L]
+#  </Location>
+#</IfModule>
 
 
 # Proxy /api requests to $BASE_URL/api
