--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "d3": "^7.8.2",
     "html-react-parser": "^3.0.4",
     "jquery": "^3.6.3",
+    "jspdf": "^2.5.1",
     "react-d3-components": "^0.9.1",
     "resize-observer-polyfill": "^1.5.1"
   }
