--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "d3": "^7.8.2",
     "html-loader": "^4.2.0",
     "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "plotly.js": "^2.18.0",
     "plotly.js-dist": "^2.20.0",
     "react": "^18.2.0",
