--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
     "recoil": "^0.7.6",
+    "swagger-ui-react": "^5.1.3",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
