--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/d3": "^7.4.0",
     "d3": "^7.8.2",
+    "downloadjs": "^1.4.7",
     "html-react-parser": "^3.0.4",
     "jquery": "^3.6.3",
     "jspdf": "^2.5.1",
