--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "html-loader": "^4.2.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
+    "mathjs": "^12.3.1",
     "plotly.js": "^2.18.0",
     "plotly.js-dist": "^2.20.0",
     "react": "^18.2.0",
