--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 services:
-  # backend:
-  #   build:
-  #     context: "."
-  #     dockerfile: "./docker/backend.dockerfile"
-  #   env_file: server/.env
-  #   ports:
-  #     - "9000:9000"
+  backend:
+    build:
+      context: "."
+      dockerfile: "./docker/backend.dockerfile"
+    env_file: server/.env
+    ports:
+      - "9000:9000"
 
   frontend:
     build:
