--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy ExploreGWAS
 on:
   workflow_dispatch:
     inputs:
@@ -12,31 +12,24 @@ on:
           - qa
           - stage
           - prod
-      import_data:
-        description: "Run data import task"
-        required: false
-        default: false
-        type: boolean
 
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  Deploy:
+  deploy-exploregwas:
     runs-on: ubuntu-latest
     environment: ${{ inputs.tier }}
     env:
-      APP: mca-explorer
+      APP: exploregwas
       TZ: America/New_York
       AWS_REGION: us-east-1
-      TASK_DEFINITION_TEMPLATE_PATH: aws
+      TASK_DEFINITION_TEMPLATE_PATH: .github/aws
       FRONTEND_CONTAINER_PORT: 80
       BACKEND_CONTAINER_PORT: 9000
       ECS_CPU_UNITS: ${{ secrets.ECS_CPU_UNITS || '2048' }}
       ECS_MEMORY_UNITS: ${{ secrets.ECS_MEMORY_UNITS || '4096' }}
-      ECS_DATA_IMPORT_CPU_UNITS: ${{ secrets.ECS_DATA_IMPORT_CPU_UNITS || '2048' }}
-      ECS_DATA_IMPORT_MEMORY_UNITS: ${{ secrets.ECS_DATA_IMPORT_MEMORY_UNITS || '4096' }}
       TIER: ${{ inputs.tier }}
       IMAGE_TIER: ${{ contains(fromJson('["dev","qa"]'), inputs.tier) && 'development' || 'release' }}
       CICD_ROLE_ARN: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github-actions-cicd
@@ -56,14 +49,12 @@ jobs:
           echo "DATE=$(date +"%Y%m%d")" >> $GITHUB_ENV
 
           TIMESTAMP=$(date +"%Y%m%d%H%M%S")
-          REPO=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/$APP
+          REPO=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/exploregwas
           echo "IMAGE_REPOSITORY=$REPO" >> $GITHUB_ENV
           echo "FRONTEND_IMAGE=$REPO:$IMAGE_TIER-frontend-${{ github.ref_name }}-$TIMESTAMP" >> $GITHUB_ENV
           echo "BACKEND_IMAGE=$REPO:$IMAGE_TIER-backend-${{ github.ref_name }}-$TIMESTAMP" >> $GITHUB_ENV
-          echo "DATA_IMPORT_IMAGE=$REPO:$IMAGE_TIER-data-import-${{ github.ref_name }}-$TIMESTAMP" >> $GITHUB_ENV
           echo "FRONTEND_IMAGE_LATEST=$REPO:$IMAGE_TIER-frontend-${{ github.ref_name }}-latest" >> $GITHUB_ENV
           echo "BACKEND_IMAGE_LATEST=$REPO:$IMAGE_TIER-backend-${{ github.ref_name }}-latest" >> $GITHUB_ENV
-          echo "DATA_IMPORT_IMAGE_LATEST=$REPO:$IMAGE_TIER-data-import-${{ github.ref_name }}-latest" >> $GITHUB_ENV
           echo "ENVIRONMENT_TIER=${TIER^^}" >> $GITHUB_ENV
 
           if [[ "$TIER" == "dev" ]]; then
@@ -78,13 +69,11 @@ jobs:
 
           # Define parameters to retrieve (SSM name = ENV_VAR_NAME)
           declare -A PARAMS=(
-            ["subnet_ids"]="SUBNET_IDS"
-            ["security_group_ids"]="SECURITY_GROUP_IDS"
             ["ecs_cluster"]="ECS_CLUSTER"
             ["ecs_web_task"]="ECS_WEB_TASK"
-            ["ecs_data_import_task"]="ECS_DATA_IMPORT_TASK"
             ["ecs_web_service"]="ECS_WEB_SERVICE"
             ["role_arn"]="ROLE_ARN"
+            ["application_path"]="APPLICATION_PATH"
           )
 
           # Retrieve each parameter and export to environment
@@ -125,19 +114,6 @@ jobs:
           cache-from: type=registry,ref=${{ env.IMAGE_REPOSITORY }}:backend-cache
           cache-to: type=registry,ref=${{ env.IMAGE_REPOSITORY }}:backend-cache,image-manifest=true,oci-mediatypes=true,mode=max
 
-      - name: Build and push data import image
-        uses: docker/build-push-action@v6.18.0
-        with:
-          context: .
-          file: docker/data-import.dockerfile
-          pull: true
-          push: true
-          tags: |
-            ${{ env.DATA_IMPORT_IMAGE }}
-            ${{ env.DATA_IMPORT_IMAGE_LATEST }}
-          cache-from: type=registry,ref=${{ env.IMAGE_REPOSITORY }}:data-import-cache
-          cache-to: type=registry,ref=${{ env.IMAGE_REPOSITORY }}:data-import-cache,image-manifest=true,oci-mediatypes=true,mode=max
-
       - name: Build and push frontend image
         uses: docker/build-push-action@v6.18.0
         with:
@@ -145,6 +121,8 @@ jobs:
           file: docker/frontend.dockerfile
           pull: true
           push: true
+          build-args: |
+            APPLICATION_PATH=${{ env.APPLICATION_PATH }}
           tags: |
             ${{ env.FRONTEND_IMAGE }}
             ${{ env.FRONTEND_IMAGE_LATEST }}
@@ -153,6 +131,7 @@ jobs:
 
       - name: Debug frontend build artifacts
         run: |
+          echo "Application path: ${{ env.APPLICATION_PATH }}"
           echo "Frontend image: ${{ env.FRONTEND_IMAGE }}"
           echo "Inspecting frontend container build directory:"
           docker run --rm ${{ env.FRONTEND_IMAGE }} ls -l /var/www/html || echo "Failed to inspect container"
@@ -162,12 +141,6 @@ jobs:
           envsubst < $TASK_DEFINITION_TEMPLATE_PATH/web.yml > web.yml
           echo "Rendered web Task Definition:"
           cat web.yml
-
-      - name: Render data import task definition
-        run: |
-          envsubst < $TASK_DEFINITION_TEMPLATE_PATH/data-import.yml > data-import.yml
-          echo "Rendered data import Task Definition:"
-          cat data-import.yml
 
       - name: Register and deploy web service
         run: |
@@ -181,23 +154,15 @@ jobs:
               --propagate-tags TASK_DEFINITION \
               --force-new-deployment
 
-      - name: Register data import task definition
-        run: |
-          aws ecs register-task-definition --cli-input-yaml file://data-import.yml
-
-      - name: Run data import task
-        if: github.event.inputs.import_data == 'true'
-        run: |
-          aws ecs run-task \
-            --cluster ${{ env.ECS_CLUSTER }} \
-            --count 1 \
-            --launch-type FARGATE \
-            --network-configuration "awsvpcConfiguration={subnets=[${{ env.SUBNET_IDS }}],securityGroups=[${{ env.SECURITY_GROUP_IDS }}]}" \
-            --task-definition ${{ env.ECS_DATA_IMPORT_TASK }}
+      # - name: Wait for service stability
+      #   run: |
+      #     aws ecs wait services-stable \
+      #         --cluster ${{ env.ECS_CLUSTER }} \
+      #         --services ${{ env.ECS_WEB_SERVICE }}
 
       - name: Cleanup old task definitions
         run: |
-          for family in "$ECS_WEB_TASK" "$ECS_DATA_IMPORT_TASK"; do
+          for family in "$ECS_WEB_TASK"; do
               echo "Pruning old revisions for family: $family"
               aws ecs list-task-definitions --family-prefix "$family" --sort DESC --query 'taskDefinitionArns[3:]' --output text \
                   | tr '\t' '\n' | while read -r arn; do
