optimize the query

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,8 @@ LOG_LEVEL=info
 OPENSEARCH_USERNAME=
 OPENSEARCH_PASSWORD=
 OPENSEARCH_ENDPOINT=
+ENABLE_QUERY_TIMING=false
+MCA_PAGE_SIZE=5000
+DENOMINATOR_MAX_TERMS=65000
+DENOMINATOR_PAGE_SIZE=5000
+DENOMINATOR_CHUNK_CONCURRENCY=2
