--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
       APP: mca-explorer
       TZ: America/New_York
       AWS_REGION: us-east-1
+      ECS_CPU_UNITS: 2048
+      ECS_MEMORY_UNITS: 4096
       TASK_DEFINITION_TEMPLATE_PATH: .github/aws
       FRONTEND_CONTAINER_PORT: 80
       BACKEND_CONTAINER_PORT: 9000
